<resources>
    <string name="app_name">SDJIC</string>
    <string name="sdj_intertnational_college">SDJ International College</string>
    <string name="student_name">Student Name</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="save_student">Save Student</string>
    <string name="token">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</string>
    <string name="token2">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</string>
    <string name="check_box_demo">Check Box Demo</string>
    <string name="tea_10_rs">Tea (10 Rs)</string>
    <string name="coffee_20_rs">Coffee (20 Rs)</string>
    <string name="pizza_100_rs">Pizza (100 Rs)</string>
    <string name="place_order">Place Order</string>
</resources>